# typingapp

./: .gitignore  CLAUDE.md  app.js  index.html  package-lock.json  package.json  readme.md  style.css
.claude/skills/drawio/: SKILL.md  draw-io-xml-reference.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: auth.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: auth.py  passages.py  results.py
backend/tests/: conftest.py  test_auth_api.py  test_health.py  test_models.py  test_passages_api.py  test_passages_corpus.py  test_results_api.py
docs/: compare.md  plan.md  typing-trainer.drawio  upgrade-plan-01.md  user-flow.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Auth.tsx  Calendar.tsx  History.tsx  Passage.tsx
frontend/src/hooks/: useTyping.ts
frontend/src/lib/: calendar.test.ts  calendar.ts  scoring.test.ts  scoring.ts
src/: main.ts  passages.ts  results.ts  scroll.ts  style.css  typing.ts
test/: passages.test.js
test/fixtures/: bad-passages.json
