[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
